# LC_LG_ADV

./: main.py  pyproject.toml  requirements.txt
00_langchain_intro/: 01_langchainv1.excalidraw  01_langchainv1.ipynb  02_model_integrate.ipynb  03_streaming_and_batch.ipynb  04_tools.ipynb  05_messages.ipynb  06_sturctured_output.ipynb
01_langgraph_intro/: lg_gettin_started.excalidraw  lg_getting_started.ipynb
